# mq-mcp

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
src/: lib.rs  main.rs  server.rs
tests/: http_transport.rs
