[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Markdown Query - MCP server implementation"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query", "mcp"]
license = "MIT"
name = "mq-mcp"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.19"

[dependencies]
miette = {version = "7.6.0", features = ["fancy"]}
mq-hir = "0.6.2"
mq-lang = "0.6.2"
mq-markdown = "0.6.2"
rmcp = {version = "1.7.0", features = ["server"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread", "io-std"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}

[dev-dependencies]
rstest = "0.26.1"

[lib]
name = "mq_mcp"
path = "src/lib.rs"
