[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Markdown Query - MCP server implementation"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query", "mcp"]
license = "MIT"
name = "mq-mcp"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.23"

[dependencies]
axum = {version = "0.8", default-features = false, features = ["http1", "tokio"]}
clap = {version = "4.6", features = ["derive"]}
miette = {version = "7.6.0", features = ["fancy"]}
mq-db = "0.1.8"
mq-hir = "0.7.0"
mq-lang = "0.7.0"
mq-markdown = "0.7.0"
rmcp = {version = "2.1.0", features = ["server", "transport-streamable-http-server"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread", "io-std", "net", "signal"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}

[dev-dependencies]
reqwest = {version = "0.13", default-features = false, features = ["json"]}
rstest = "0.26.1"
tempfile = "3"

[lib]
name = "mq_mcp"
path = "src/lib.rs"
